--- a/wizard.yml
+++ b/wizard.yml
@@ -1,17 +1,17 @@
 wizard:
   classes: div
   create: wizard
-  header_class: [w3-center, w3-large]
+  header_class: [centered, large-font]
   script: [/common/wizard.js]
   css: [/common/wizard.css]
   text: $dummy
   dummy: []
   bookmarks:
     type: empty
-    class: [wizard-bookmark-holder-left,w3-quarter]
+    class: [wizard-bookmark-holder-left,quarter]
   step:
     type: empty
-    class: [wizard-page, hide,w3-threequarter]
+    class: [wizard-page,hide,threequarter]
   steps: []
   prev:
     type: button
