--- a/menu.yml
+++ b/menu.yml
@@ -10,7 +10,7 @@ menu:
 
 menu_item:
   tag: li
-  class: [block,float-left,nopad,normargin,cursor-pointer,vertical-middle]
+  class: [block,float-left,nopad,normargin,cursor-pointer,vertical-middle,nowrap]
   parent_name: $name
   url: /$id
   text: { type: menu_link }
