--- a/controls.yml
+++ b/controls.yml
@@ -330,7 +330,7 @@ google_icon:
 google_map:
   tag: div
   create: mapper
-  script: /common/map.js
+  script: [/common/map.js]
   zoom: 5
   pin: blue_map_marker
   icon_path: /
