allow handling of any event with on_event

--- a/model_sample.yml
+++ b/model_sample.yml
@@ -17,6 +17,10 @@ test:
         # text: >
         #   <d "color is " + color + " checked " + checked + " switched " + switched
         text: color <d color> checked <d checked> switched <d switched>
+        on_click:
+          action: post
+          post:
+            - alert: hello
 
     - type: input
     - style_test:
