--- a/controls.yml
+++ b/controls.yml
@@ -237,6 +237,7 @@ font_awesome:
   icon: $id
   class: [fa,fa-$icon]
   css: [/common/font-awesome/css/font-awesome.min.css]
+  text: ""
 
 fieldset:
   templates: fieldset
