use additional fields for collection filtering

--- a/user.yml
+++ b/user.yml
@@ -379,7 +379,7 @@ profile:
   values:
     - read_session: [user_email]
     - collection_values:
-        - user: [email: $user_email]
+        - user: [email: $user_email, active: 1]
         - first_name
         - last_name
         - cellphone
