--- a/validators.yml
+++ b/validators.yml
@@ -37,6 +37,10 @@ blank:
 collection:
   valid: sql(select 1 from collection where collection='$1' and identifier='$2')
 
+collection_filter:
+  4: ""
+  valid: sql(select value$4 from collection where collection = '$1' and identifier = '$2' and attribute = '$3')
+
 contains_at_least:
   valid: /$1/s
   error: $name must contain at least $2
