implemnted allowing of external methods through helpers

--- a/controls.yml
+++ b/controls.yml
@@ -207,7 +207,7 @@ dropdown:
 
 dropdown_collection:
   type: dropdown
-  options: [collection]
+  options: [collection.data]
   valid: collection($name,$value)
 
 dropdown_default:
