set default start page to configured value or user start page value

--- a/app-config.yml
+++ b/app-config.yml
@@ -3,7 +3,8 @@ landing:
   page: /index
 session:
   page: /index
-  content: /home
+  content: home
+start_page: home
 log_dir: ../log
 log_file: access.log
 css:
