--- a/user.yml
+++ b/user.yml
@@ -281,8 +281,8 @@ login:
     # - load_lineage: [roles,role,code,base_code]
     - collection.update: [user, identifier: $email, attempts: 0]
     - read_server: [HTTP_USER_AGENT,REMOTE_ADDR,REMOTE_HOST,REQUEST_URI]
-    - collection.insert: [session, "", email, roles, HTTP_USER_AGENT, REMOTE_ADDR,REQUEST_URI]
-    - write_session: [uid: $email, pid, roles: [reg], user_email: $email,user_first_name: $first_name,user_last_name: $last_name,user_cellphone: $cellphone]
+    - collection.insert: [session, "", user: $email, roles, HTTP_USER_AGENT, REMOTE_ADDR,REQUEST_URI]
+    - write_session: [sid: $identifier, roles]
     - close_dialog
     - redirect: /$start_page
 
@@ -302,9 +302,8 @@ login_password:
 
 logout:
   read: action
-  post: [read_session, redirect: "/"]
+  post: [redirect: "/"]
   audit:
-    detail: $user_email
     post: [call: session_destroy()]
 
 modify:
