--- a/controls.yml
+++ b/controls.yml
@@ -456,7 +456,7 @@ label_left:
   subject:
     derive: [input_width,input_left]
     width: $input_width
-    class: [border,pad]
+    class: [border,pad,inline-block]
   text: $label$field
   styles: [vspaced]
 
